:passport_control: feat(Password reset, user dashboard, env configuration)
- Now users can reset the password with password reset token. And get an
  email on successfull attempt

- Logged in users can get their details using the isLoggedIn middleware

- Env variables are now more readable using the config package.
